2004-10-28  Sebastien Pouliot  <sebastien@ximian.com>

	* AuthenticodeDeformatterTest.cs: Check timestamp as an UTC value so 
	that the test can work anywhere in the world (and not just at home ;)

2004-09-07  Sebastien Pouliot  <sebastien@ximian.com>

	* AuthenticodeDeformatterTest.cs: New. Unit tests to validate a valid
	authenticode-signed assembly (included in test file) and an invalid
	(non signed) assembly (the unit test assembly).

2004-05-11  Sebastien Pouliot  <sebastien@ximian.com>

	* PrivateKeyTest.cs: Added new unit tests for better coverage.
	* SoftwarePublisherCertificateTest.cs: Added new unit tests for better
	coverage.

2004-04-22  Sebastien Pouliot  <sebastien@ximian.com>

	* SoftwarePublisherCertificateTest.cs: Ajusted to changes in the
	assembly.

2003-10-11  Sebastien Pouliot  <spouliot@videotron.ca>

	* SoftwarePublisherCertificateTest.cs: Repaired test build.

2003-03-15  Sebastien Pouliot  <spouliot@videotron.ca>

	* PrivateKeyTest.cs: New. Unit test for using some PVK files
	generated by makecert.exe.

2003-03-06  Sebastien Pouliot  <spouliot@videotron.ca>

	* SoftwarePublisherCertificateTest.cs: New. Unit tests for
	using some SPC files generated by cert2spc.
